# RemoteIIC

./: .gitignore  .gitmodules  CMakeLists.txt  drv_imu.cpp  drv_imu.hpp  drv_imu_def.hpp  drv_imu_invensense.cpp  drv_imu_invensense.hpp  drv_imu_invensense.md  drv_imu_invensense_def.hpp  i2c.cpp  i2c.h  inv_imu.cpp  inv_imu.h  inv_imu.hpp  inv_mpu.h  inv_mpu_def.h  main.cpp  remote_i2c.cpp  remote_i2c.h  rpy.cpp  smbus.cpp
client/: CmakeLists.txt  SerialPort.cpp  SerialPort.h  client.cpp  client.hpp  conf.cpp  test.cpp
host/: .cproject  .mxproject  .project  CMakeLists.txt  Host.ioc  st_nucleo_f4.cfg  传输协议.md  引脚.xlsx
host/Inc/: main.h  stm32f4xx_hal_conf.h
host/Src/: conf.cpp  conf.h  gpio.hpp  host.cpp  main.c  stm32_hal.hpp  stm32f4xx_hal_msp.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c
